--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "html-react-parser": "^4.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.13.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
