--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -82,5 +82,4 @@ gem "jsonapi-serializer", "~> 2.2"
 gem "carrierwave", "~> 3.0"
 
 gem "devise", "~> 4.9"
-
-gem "doorkeeper", "~> 5.6"
+gem "devise-api", "~> 0.1.3"
