--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -49,7 +49,7 @@ gem 'bootsnap', require: false
 # gem "sassc-rails"
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
-# gem "image_processing", "~> 1.2"
+gem "image_processing", "~> 1.2"
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
@@ -97,3 +97,6 @@ gem 'rack-cors'
 gem 'rswag'
 
 gem 'swagger-blocks'
+
+gem "jsonapi-serializer", "~> 2.2"
+gem "carrierwave", "~> 3.0"
