--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -13,7 +13,7 @@ gem 'sprockets-rails'
 
 # Use pg as the database for Active Record
 # gem 'pg', '~> 1.1'
-gem 'sqlite3', '~> 1.3', '>= 1.3.11'
+gem 'sqlite3'
 
 # Use the Puma web server [https://github.com/puma/puma]
 gem 'puma'
@@ -49,7 +49,7 @@ gem 'bootsnap', require: false
 # gem "sassc-rails"
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
-gem "image_processing", "~> 1.2"
+gem 'image_processing', '~> 1.2'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
@@ -98,5 +98,5 @@ gem 'rswag'
 
 gem 'swagger-blocks'
 
-gem "jsonapi-serializer", "~> 2.2"
-gem "carrierwave", "~> 3.0"
+gem 'carrierwave', '~> 3.0'
+gem 'jsonapi-serializer'
